--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -58,14 +58,17 @@ $background-color-step-5:  #4ba5de;
 $background-color-step-6:  #26c6da;
 $background-color-step-7:  #26a69a;
 $background-color-step-8:  #66bb6a;
-$background-color-step-9:  #ab47bc;
-$background-color-step-10:  #ab47bc;
-$background-color-step-11:  #ab47bc;
-$background-color-step-12:  #ab47bc;
-$background-color-step-13:  #ab47bc;
+$background-color-step-9:  #9ccc65;
+$background-color-step-10:  #afb42b;
+$background-color-step-11:  #ef9f19;
+$background-color-step-12:  #fc774d;
+$background-color-step-13:  #a96147;
 $background-color-step-14:  #ef5350;
-$background-color-step-15:  #ab47bc;
-
+$background-color-step-15:  #62899d;
+$left-label-common: -30px;
+$left-label-5: -60px;
+$left-label-3: -50px;
+$left-label-9: -16px;	
 
 //== Colors
 //
