--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -69,6 +69,8 @@ $left-label-common: -30px;
 $left-label-5: -60px;
 $left-label-3: -50px;
 $left-label-9: -16px;	
+$font-size-1: 18px;
+$font-size-2: 13px;
 
 //== Colors
 //
